# Othello

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md
docs/: .gitignore  conf.py  index.rst  modules.rst  othello.rst
othello/: .gitignore  README.md  pyproject.toml
othello/benchmarks/: .gitignore  experiments.py  visualize.py
othello/othello/: __init__.py  __main__.py  ai_features.py  bitboard.py  blitz_timer.py  board_parser.py  cli.py  command_parser.py  config.py  controllers.py  gui.py  logger.py  othello_board.py  parser.py
othello/tests/: .gitignore  test_ai_features.py  test_ai_mode.py  test_bitboard.py  test_blitz_mode.py  test_blitz_timer.py  test_board_parser.py  test_command_parser.py  test_config.py  test_controllers.py  test_gui.py  test_logger.py  test_main.py  test_normal_mode.py  test_othello_board.py  test_parser.py
reports/: .gitignore
reports/final/: .gitignore  bibliography.bib  report.tex
reports/preliminary/: .gitignore  report.tex
